--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Unit 3 Project: Wonderland</title>
+        <title>Wonderland Adventure</title>
     </head>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
